// Vitest Snapshot v1

exports[`Hamburger > renders correctly with open false 1`] = `
<body>
  <div>
    <button
      class="sm:hidden flex items-center justify-items-end m-auto h-10 w-fit hover:text-gray-700 cursor-pointer border-none focus:outline-none s-zPZ177rNd-sa"
    >
      <svg
        class="s-zPZ177rNd-sa"
        height="24"
        width="28"
      >
        <line
          class="s-zPZ177rNd-sa"
          id="top"
          x1="0"
          x2="28"
          y1="3"
          y2="3"
        />
        <line
          class="s-zPZ177rNd-sa"
          id="middle"
          x1="0"
          x2="28"
          y1="11"
          y2="11"
        />
        <line
          class="s-zPZ177rNd-sa"
          id="bottom"
          x1="0"
          x2="28"
          y1="19"
          y2="19"
        />
      </svg>
    </button>
    <!--&lt;Hamburger&gt;-->
  </div>
</body>
`;

exports[`Hamburger > renders correctly with open true 1`] = `
<body>
  <div>
    <button
      class="sm:hidden flex items-center justify-items-end m-auto h-10 w-fit hover:text-gray-700 cursor-pointer border-none focus:outline-none s-zPZ177rNd-sa open"
    >
      <svg
        class="s-zPZ177rNd-sa"
        height="24"
        width="28"
      >
        <line
          class="s-zPZ177rNd-sa"
          id="top"
          x1="0"
          x2="28"
          y1="3"
          y2="3"
        />
        <line
          class="s-zPZ177rNd-sa"
          id="middle"
          x1="0"
          x2="28"
          y1="11"
          y2="11"
        />
        <line
          class="s-zPZ177rNd-sa"
          id="bottom"
          x1="0"
          x2="28"
          y1="19"
          y2="19"
        />
      </svg>
    </button>
    <!--&lt;Hamburger&gt;-->
  </div>
</body>
`;
